--- a/.editorconfig
+++ b/.editorconfig
@@ -1,10 +1,10 @@
 # top-most EditorConfig file
 root = true
 
-[*]
+[src/*]
 charset = utf-8
 end_of_line = lf
 insert_final_newline = true
-indent_style = tab
-indent_size = 4
-tab_width = 4
+indent_style = space
+indent_size = 2
+tab_width = 2
