--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
 	"name": "obsidian-sample-plugin",
 	"version": "1.0.0",
 	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
-	"main": "main.js",
 	"scripts": {
+		"test": "jest --passWithNoTests",
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-		"version": "node version-bump.mjs && git add manifest.json versions.json"
+		"version": "node version-bump.mjs && git add manifest.json versions.json",
+		"prepare": "husky install"
 	},
+	"type": "module",
 	"keywords": [],
 	"author": "",
 	"license": "MIT",
@@ -17,8 +19,21 @@
 		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "3.3.0",
 		"esbuild": "0.18.4",
+		"esbuild-jest": "^0.5.0",
+		"eslint-config-prettier": "^8.8.0",
+		"eslint-import-resolver-typescript": "^3.5.5",
+		"eslint-plugin-import": "npm:eslint-plugin-i@^2.27.5-2",
+		"husky": "^8.0.3",
+		"jest": "^29.5.0",
+		"lint-staged": "^13.2.2",
 		"obsidian": "latest",
+		"prettier": "^2.8.8",
 		"tslib": "2.5.3",
 		"typescript": "4.7.4"
+	},
+	"jest": {
+		"transform": {
+			"^.+\\.tsx?$": "esbuild-jest"
+		}
 	}
 }
