--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
 		"obsidian": "latest",
 		"prettier": "^2.8.8",
 		"tslib": "2.5.3",
-		"typescript": "4.7.4"
+		"typescript": "^5.1.3"
 	},
 	"jest": {
 		"transform": {
