--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
 		"version": "node version-bump.mjs && git add manifest.json versions.json",
-		"prepare": "husky install"
+		"prepare": "husky install && chmod ug+x .husky/*"
 	},
 	"type": "module",
 	"keywords": [],
