--- a/.renovaterc
+++ b/.renovaterc
@@ -2,5 +2,11 @@
 	"$schema": "https://docs.renovatebot.com/renovate-schema.json",
 	"extends": [
 		"config:base", "gitmoji"
+	],
+	"packageRules": [
+		{
+		  "matchPackageNames": ["@types/node"],
+		  "allowedVersions": "<=16.11"
+		}
 	]
 }
