--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^16.11.6",
+		"@types/node-cron": "^3.0.7",
 		"@typescript-eslint/eslint-plugin": "5.59.11",
 		"@typescript-eslint/parser": "5.59.11",
 		"builtin-modules": "3.3.0",
@@ -35,5 +36,9 @@
 		"transform": {
 			"^.+\\.tsx?$": "esbuild-jest"
 		}
+	},
+	"dependencies": {
+		"node-cron": "^3.0.2",
+		"obsidian-daily-notes-interface": "^0.9.4"
 	}
 }
