--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^16.11.6",
-		"@types/node-cron": "^3.0.7",
+		"@types/node-schedule": "^2.1.0",
 		"@typescript-eslint/eslint-plugin": "5.59.11",
 		"@typescript-eslint/parser": "5.59.11",
 		"builtin-modules": "3.3.0",
@@ -39,7 +39,7 @@
 	},
 	"dependencies": {
 		"moment": "^2.29.4",
-		"node-cron": "^3.0.2",
+		"node-schedule": "^2.1.1",
 		"obsidian-daily-notes-interface": "^0.9.4"
 	}
 }
