--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"author": "",
 	"license": "MIT",
 	"devDependencies": {
+		"@types/moment": "^2.13.0",
 		"@types/node": "^16.11.6",
 		"@types/node-schedule": "^2.1.0",
 		"@typescript-eslint/eslint-plugin": "5.59.11",
