:wrench: Run "npm install" on start devContainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,5 +9,8 @@
 		"add permission to node_modules": "sudo chown node node_modules",
 		"npm": "npm install -g gitmoji-cli @go-task/cli tsx",
 		"git add safe directory": "sudo git config --system --add safe.directory ${containerWorkspaceFolder}"
+	},
+	"postStartCommand": {
+		"npm install": "npm install"
 	}
 }
