--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
 	"author": "",
 	"license": "MIT",
 	"devDependencies": {
+		"@swc/core": "^1.3.66",
+		"@swc/jest": "^0.2.26",
 		"@types/moment": "^2.13.0",
 		"@types/node": "^16.11.6",
 		"@types/node-schedule": "^2.1.0",
