--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@typescript-eslint/eslint-plugin": "5.60.0",
 		"@typescript-eslint/parser": "5.60.0",
 		"builtin-modules": "3.3.0",
+		"copyfiles": "2.4.1",
 		"esbuild": "0.18.6",
 		"esbuild-jest": "^0.5.0",
 		"eslint-config-prettier": "^8.8.0",
@@ -32,6 +33,7 @@
 		"lint-staged": "^13.2.2",
 		"obsidian": "latest",
 		"prettier": "^2.8.8",
+		"rimraf": "5.0.1",
 		"tslib": "2.5.3",
 		"typescript": "^5.1.3"
 	},
