--- a/package.json
+++ b/package.json
@@ -14,28 +14,28 @@
 	"author": "",
 	"license": "MIT",
 	"devDependencies": {
-		"@swc/core": "^1.3.66",
-		"@swc/jest": "^0.2.26",
+		"@swc/core": "1.3.66",
+		"@swc/jest": "0.2.26",
 		"@types/moment": "^2.13.0",
-		"@types/node": "^16.11.6",
-		"@types/node-schedule": "^2.1.0",
+		"@types/node": "16.11.6",
+		"@types/node-schedule": "2.1.0",
 		"@typescript-eslint/eslint-plugin": "5.60.0",
 		"@typescript-eslint/parser": "5.60.0",
 		"builtin-modules": "3.3.0",
 		"copyfiles": "2.4.1",
 		"esbuild": "0.18.6",
 		"esbuild-jest": "^0.5.0",
-		"eslint-config-prettier": "^8.8.0",
-		"eslint-import-resolver-typescript": "^3.5.5",
-		"eslint-plugin-import": "npm:eslint-plugin-i@^2.27.5-2",
-		"husky": "^8.0.3",
-		"jest": "^29.5.0",
-		"lint-staged": "^13.2.2",
-		"obsidian": "latest",
-		"prettier": "^2.8.8",
+		"eslint-config-prettier": "8.8.0",
+		"eslint-import-resolver-typescript": "3.5.5",
+		"eslint-plugin-import": "npm:eslint-plugin-i@2.27.5-2",
+		"husky": "8.0.3",
+		"jest": "29.5.0",
+		"lint-staged": "13.2.2",
+		"obsidian": "1.2.8",
+		"prettier": "2.8.8",
 		"rimraf": "5.0.1",
 		"tslib": "2.5.3",
-		"typescript": "^5.1.3"
+		"typescript": "5.1.3"
 	},
 	"jest": {
 		"transform": {
@@ -43,7 +43,7 @@
 		}
 	},
 	"dependencies": {
-		"node-schedule": "^2.1.1",
-		"obsidian-daily-notes-interface": "^0.9.4"
+		"node-schedule": "2.1.1",
+		"obsidian-daily-notes-interface": "0.9.4"
 	}
 }
