--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
 	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
 	"scripts": {
 		"test": "jest --passWithNoTests",
+		"build": "task build",
 		"dev": "node esbuild.config.mjs",
-		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
 		"version": "node version-bump.mjs && git add manifest.json versions.json",
 		"prepare": "husky install && chmod ug+x .husky/*"
 	},
