--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"name": "Auto Create Periodic Note",
 	"version": "0.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "This is a sample plugin for Obsidian. This plugin demonstrates some of the capabilities of the Obsidian API.",
+	"description": "This plugin that automatically generates periodic notes.",
 	"author": "naokiy",
 	"authorUrl": "https://github.com/naokiy",
 	"isDesktopOnly": false
