--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "obsidian-sample-plugin",
-	"version": "1.0.0",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+	"name": "obsidian-auto-create-periodic-note",
+	"version": "0.0.0",
+	"description": "This plugin that automatically generates periodic notes.",
 	"scripts": {
 		"test": "jest --passWithNoTests",
 		"build": "task build",
