--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
 		"husky": "8.0.3",
 		"jest": "29.5.0",
 		"lint-staged": "13.2.2",
+		"mkdirp": "3.0.1",
 		"obsidian": "1.2.8",
 		"prettier": "2.8.8",
 		"rimraf": "5.0.1",
+		"touch": "3.1.0",
 		"tslib": "2.5.3",
 		"typescript": "5.1.3"
 	},
