--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,5 @@
 	"description": "This plugin that automatically generates periodic notes.",
 	"author": "naokiy",
 	"authorUrl": "https://github.com/naokiy",
-	"isDesktopOnly": false
+	"isDesktopOnly": true
 }
