--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@swc/core": "1.3.66",
 		"@swc/jest": "0.2.26",
 		"@types/node": "16.11.68",
+		"@types/node-notifier": "8.0.2",
 		"@types/node-schedule": "2.1.0",
 		"@typescript-eslint/eslint-plugin": "5.60.0",
 		"@typescript-eslint/parser": "5.60.0",
@@ -43,6 +44,7 @@
 		}
 	},
 	"dependencies": {
+		"node-notifier": "10.0.1",
 		"node-schedule": "2.1.1",
 		"obsidian-daily-notes-interface": "0.9.4"
 	}
