--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"eslint-config-prettier": "8.8.0",
 		"eslint-import-resolver-typescript": "3.5.5",
 		"eslint-plugin-import": "npm:eslint-plugin-i@2.27.5-3",
+		"eslint-plugin-perfectionist": "1.4.0",
 		"husky": "8.0.3",
 		"jest": "29.5.0",
 		"lint-staged": "13.2.3",
