--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"builtin-modules": "3.3.0",
 		"copyfiles": "2.4.1",
 		"esbuild": "0.18.11",
+		"eslint": "8.44.0",
 		"eslint-config-prettier": "8.8.0",
 		"eslint-plugin-perfectionist": "1.4.0",
 		"husky": "8.0.3",
