--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
 		"version": "node version-bump.mjs && git add manifest.json versions.json",
 		"prepare": "husky install && chmod ug+x .husky/*"
 	},
+	"private": true,
 	"type": "module",
 	"keywords": [],
 	"author": "",
 	"license": "MIT",
 	"devDependencies": {
+		"@semantic-release/changelog": "6.0.3",
+		"@semantic-release/exec": "6.0.3",
+		"@semantic-release/git": "10.0.1",
 		"@swc/core": "1.3.68",
 		"@swc/jest": "0.2.26",
 		"@types/node": "16.11.68",
@@ -26,6 +30,7 @@
 		"eslint": "8.44.0",
 		"eslint-config-prettier": "8.8.0",
 		"eslint-plugin-perfectionist": "1.4.0",
+		"gitmojis": "3.13.5",
 		"husky": "8.0.3",
 		"jest": "29.6.1",
 		"lint-staged": "13.2.3",
@@ -33,6 +38,8 @@
 		"obsidian": "1.2.8",
 		"prettier": "3.0.0",
 		"rimraf": "5.0.1",
+		"semantic-release": "21.0.7",
+		"semantic-release-gitmoji": "1.6.4",
 		"touch": "3.1.0",
 		"tslib": "2.6.0",
 		"typescript": "5.1.6"
