--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       - master
-  workflow_diapatch:
+  workflow_dispatch:
 
 permissions:
   contents: read # for checkout
