--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "lts/*"
+          persist-credentials: false
       - name: Install dependencies
         run: npm clean-install
       - name: Install Task
