--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
 		"@typescript-eslint/eslint-plugin": "6.0.0",
 		"@typescript-eslint/parser": "6.0.0",
 		"builtin-modules": "3.3.0",
+		"commitizen": "4.3.0",
 		"copyfiles": "2.4.1",
+		"cz-conventional-changelog": "3.3.0",
 		"esbuild": "0.18.11",
 		"eslint": "8.44.0",
 		"eslint-config-prettier": "8.8.0",
