ci(github actions): :green_heart: Fix CI

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Build
         if: steps.release.outputs.release_created
         run:
-          task build release-beta
+          task build
       - name: Upload Release Artifact
         if: steps.release.outputs.release_created
         env:
