--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -40,15 +40,19 @@ jobs:
             }
 
             return ver;
-      - uses: ./.github/workflows/modify-release-pr.yml
-        if: ${{ steps.release.outputs.pr && !steps.release.outputs.release_created }}
-        with:
-          version: ${{ steps.extract-version.outputs.result }}
-          pr-number: ${{ fromJSON(steps.release.outputs.pr).number }}
-        secrets: inherit
-      - uses: ./.github/workflows/modify-release.yml
-        if: ${{ steps.release.outputs.release_created }}
-        with:
-          version: ${{ steps.extract-version.outputs.result }}
-          tag_name: ${{ steps.release.outputs.tag_name }}
-        secrets: inherit
+  modify-release-pr:
+    needs: release-please
+    uses: ./.github/workflows/modify-release-pr.yml
+    if: ${{ needs.release-please.release.outputs.pr && !needs.release-please.release.outputs.release_created }}
+    with:
+      version: ${{ needs.release-please.xtract-version.outputs.result }}
+      pr-number: ${{ fromJSON(needs.release-please.release.outputs.pr).number }}
+    secrets: inherit
+  modify-release:
+    needs: release-please
+    uses: ./.github/workflows/modify-release.yml
+    if: ${{ needs.release-please.release.outputs.release_created }}
+    with:
+      version: ${{ needs.release-please.extract-version.outputs.result }}
+      tag_name: ${{ needs.release-please.release.outputs.tag_name }}
+    secrets: inherit
