ci: :green_heart: fix

--- a/.github/workflows/modify-release-pr.yml
+++ b/.github/workflows/modify-release-pr.yml
@@ -16,6 +16,7 @@ permissions:
 jobs:
   modify-release-pr:
     runs-on: ubuntu-latest
+    steps:
       - uses: actions/setup-node@v3
         with:
           node-version: "lts/*"
