--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -12,6 +12,12 @@ name: release-please
 jobs:
   release-please:
     runs-on: ubuntu-latest
+    outputs:
+      version: ${{ steps.extract-version.outputs.result }}
+      to_modify_pr: ${{ steps.release.outputs.pr && !steps.release.outputs.release_created }}
+      to_modify_release: ${{ steps.release.outputs.release_created }}
+      pr_number: ${{ steps.release.outputs.pr && fromJSON(steps.release.outputs.pr).number || '' }}
+      tag_name: ${{ steps.release.outputs.tag_name }}
     steps:
       - uses: google-github-actions/release-please-action@v3
         id: release
@@ -43,16 +49,16 @@ jobs:
   modify-release-pr:
     needs: release-please
     uses: ./.github/workflows/modify-release-pr.yml
-    if: ${{ needs.release-please.release.outputs.pr && !needs.release-please.release.outputs.release_created }}
+    if: ${{ needs.release-please.outputs.to_modify_pr }}
     with:
-      version: ${{ needs.release-please.xtract-version.outputs.result }}
-      pr-number: ${{ fromJSON(needs.release-please.release.outputs.pr).number }}
+      version: ${{ needs.release-please.outputs.version }}
+      pr-number: ${{ needs.release-please.outputs.pr_number }}
     secrets: inherit
   modify-release:
     needs: release-please
     uses: ./.github/workflows/modify-release.yml
-    if: ${{ needs.release-please.release.outputs.release_created }}
+    if: ${{ needs.release-please.outputs.to_modify_release }}
     with:
-      version: ${{ needs.release-please.extract-version.outputs.result }}
-      tag_name: ${{ needs.release-please.release.outputs.tag_name }}
+      version: ${{ needs.release-please.outputs.version }}
+      tag_name: ${{ needs.release-please.outputs.tag_name }}
     secrets: inherit
