--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -46,19 +46,55 @@ jobs:
             }
 
             return ver;
-  modify-release-pr:
+            
+  modify-pr:
     needs: release-please
-    uses: ./.github/workflows/modify-release-pr.yml
     if: ${{ needs.release-please.outputs.to_modify_pr }}
-    with:
-      version: ${{ needs.release-please.outputs.version }}
-      pr-number: ${{ needs.release-please.outputs.pr_number }}
-    secrets: inherit
+    steps:
+      - uses: actions/setup-node@v3
+        with:
+          node-version: "lts/*"
+      - uses: actions/checkout@v3
+      - name: Install Task
+        uses: arduino/setup-task@v1
+        with:
+          version: 3.x
+      - name: Append file to PR
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh pr checkout ${{ needs.release-please.outputs.pr-number }}
+          NEW_VERSION=${{ needs.release-please.outputs.version }} task version-bump-beta
+          git config user.name github-actions[bot]
+          git config user.email 41898282+github-actions[bot]@users.noreply.github.com
+          git commit -am "chore(release): :bookmark: Bump version"
+          git push
+
   modify-release:
     needs: release-please
-    uses: ./.github/workflows/modify-release.yml
     if: ${{ needs.release-please.outputs.to_modify_release }}
-    with:
-      version: ${{ needs.release-please.outputs.version }}
-      tag_name: ${{ needs.release-please.outputs.tag_name }}
-    secrets: inherit
+    steps:
+      - uses: actions/setup-node@v3
+        with:
+          node-version: "lts/*"
+      - uses: actions/checkout@v3
+      - name: Install Task
+        uses: arduino/setup-task@v1
+        with:
+          version: 3.x
+      - name: NPM install
+        run:
+          npm ci --no-audit
+      - name: Build
+        run:
+          task build
+      - name: Upload Release Artifact
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run:
+          gh release upload ${{ needs.release-please.outputs.tag_name }} ./dist/*
+      - name: Rename Release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run:
+          gh release edit ${{ needs.release-please.outputs.tag_name }} --title ${{ needs.release-please.outputs.version }}
